@@ -3,6 +3,7 @@ xxxx-xx-xx: Revelation 0.3.4
 
 Bugfixes:
 - the Domain field had the tooltip set as its name
+- the searchbar follows the detachable toolbar setting in gnome
 
 
 2004-08-30: Revelation 0.3.3
